removed the p's for the paragraph and fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ div#congress > h1{
 
 /*Andy Kukuc about.html css DON'T TOUCH*/
 #map { /*google maps api key no longer free*/
-  height: 400px;
+  height: 350px;
   width: 1200px;
   border: 5px solid black;
   margin-top: 20px;
@@ -408,6 +408,24 @@ div#congress > h1{
   margin-left: auto;
 }
 
+div#about > h1 {
+  font-size: 1.4em;
+  font-weight: bold;
+  padding: 10px;
+}
+
+div#about > h3 {
+  font-size:1.2em;
+  font-weight: bold;
+  padding: 10px;
+}
+
+div#about > p {
+  text-indent: 50px;
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 10px;
+}
 /*Larger Phones, Side View on Phones, and Small Tablet Screen Size*/
 
 @media screen and (min-width: 480px) {
